# OpenGL-Tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
assimp/: LoadModelWidget.cpp  LoadModelWidget.h  camera2.cpp  camera2.h
assimp/model/: AssMesh.cpp  AssMesh.h  AssModel.cpp  AssModel.h  assimp_helper.h
base/: Camera.cpp  Camera.h  Dice.cpp  Dice.h  GLHelper.h  Light.cpp  Light.h  LightModel.cpp  LightModel.h  Model.cpp  Model.h  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidget2.cpp  OpenGLWidget2.h  QCamera.cpp  QCamera.h  camera_glm.hpp
cube/: Dice.h  LightModel.h  OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidget2.cpp  OpenGLWidget2.h
glfw_test/: GLFW_Triangle.h  GLFW_TwoTriangle.h  GLFW_Windows.hpp
glfw_test/base/: GLFW_Base.cpp  GLFW_Base.h
include/: stb_image.h
include/glad/: glad.h
libs/: assimp-vc143-mtd.lib
qgl_widget/: QGL_Widget.hpp  SimpleQGLWidget.h  VaoTestWidget.cpp  VaoTestWidget.h  qgl_widgetinwindow.cpp  qgl_widgetinwindow.h  qgl_widgetinwindow.ui
qgl_window/: QCubeWindow.h  QGL_Window.cpp  QGL_Window.h  QVerture.cpp  QVerture.h  SimpleTriangleWindow.h  SomeTriangleWindow.h  TriangleWindow.cpp  TriangleWindow.h  VertexCubeWindow.hpp
resource/shader/: 3_verture_vs.glsl  assimp_model_fs.glsl  assimp_model_vs.glsl  common_fs.glsl  common_light_fs.glsl  common_light_vs.glsl  common_vs.glsl  cube_fs.glsl  cube_vs.glsl  fshader2.glsl  fshader3.glsl  skybox_fs.glsl  skybox_vs.glsl  vao_f_s.glsl  vao_v_s.glsl  vshader.glsl  vshader3.glsl
skybox/: SkyBox.cpp  SkyBox.h  TWindow.cpp  TWindow.h
src/: glad.c
